--- a/GreenPlatform/src/main/resources/templates/login/loginByPhone.html
+++ b/GreenPlatform/src/main/resources/templates/login/loginByPhone.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>请注册!</title>
+    <title>请登陆!</title>
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
@@ -67,8 +67,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a href="/base/login">已有账号?立即登陆</a>
-                                    <a href="/base/registerByWx">使用微信注册</a>
+                                    <a href="./login">已有账号?立即登陆</a>
                                 </div>
                             </div>
                         </div>
