手机验证码登陆与找回密码

--- a/GreenPlatform/src/main/resources/templates/login/getBackPassword.html
+++ b/GreenPlatform/src/main/resources/templates/login/getBackPassword.html
@@ -20,25 +20,10 @@
             <div class="col-md-4 col-xs-12">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center">
-                        <b>平台用户注册</b>
+                        <b>找回密码</b>
                     </div>
                     <div class="panel-body">
                         <div id="registerForm">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="设置会员名">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="password" class="form-control input-lg" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
-                                </div>
-                            </div>
                             <div class="row">
                                 <div class="col-sm-8 col-xs-8">
                                     <input type="text" class="form-control input-lg" id="cPhone" name="cPhone" placeholder="请输入电话号码">
@@ -52,22 +37,24 @@
                                     <input type="text" class="form-control input-lg" id="smsCode" name="smsCode" placeholder="请输入验证码">
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-1 col-xs-2">
-                                    <input type="checkbox" class="checkbox" id="btnAgreeRule">
+                            <div class="row inputPassword" hidden>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control input-lg" value="aaaaaa" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
                                 </div>
-                                <div class="col-sm-11 col-xs-10">
-                                    <a href="#">《法律声明及平台服务条款》</a>
+                            </div>
+                            <div class="row inputPassword" hidden>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control input-lg" value="aaaaaa" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <button type="submit" id="btnRegister" class="btn btn-block btn-lg btn-primary">注册</button>
+                                    <button type="submit" id="btnNext" class="btn btn-block btn-lg btn-primary">确定</button>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a href="./login">已有账号?立即登陆</a>
+                                    <a href="./login">返回登陆</a>
                                 </div>
                             </div>
                         </div>
@@ -84,6 +71,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/login/register.js"></script>
+<script src="/js/login/getBackPassword.js"></script>
 </body>
 </html>
