--- a/GreenPlatform/src/main/resources/static/style/login/login.css
+++ b/GreenPlatform/src/main/resources/static/style/login/login.css
@@ -41,11 +41,11 @@ header{
 
 /*终端尺寸适配*/
 @media screen and (max-width: 800px) {
-    #registerForm .row{
+   /* #registerForm .row{
         height: 50px;
         margin-bottom: 0;
         margin-top: 5px;
-    }
+    }*/
 
 
 }
