需求整理与外部tomcat部署

--- a/GreenPlatform/src/main/resources/templates/login/getBackPassword.html
+++ b/GreenPlatform/src/main/resources/templates/login/getBackPassword.html
@@ -54,7 +54,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a href="./login">返回登陆</a>
+                                    <a href="./login">返回密码登陆</a>
                                 </div>
                             </div>
                         </div>
